# gravi

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-release.sh  check.sh  nginx.conf  serve.sh  test.sh
.cargo/: config.toml
.github/workflows/: main.yml  verify.yml
benches/: common.rs  fib-bench.rs  long-bench.rs  real-bench.rs  simple-bench.rs
src/: lib.rs  main.rs
src/app/: core.rs  mod.rs  ui.rs
src/app/core/: draw.rs  graph.rs  mod.rs  physics.rs
src/app/core/physics/: mod.rs  vector.rs
src/app/orbital/: body.rs  mod.rs  tree.rs  ui.rs
src/app/simple/: mod.rs  ui.rs
src/egui/: mod.rs
src/egui/widgets/: slider.rs
src/egui_renderer/: mod.rs
src/egui_ui/: mod.rs
src/handler/: mod.rs
src/helpers/: mod.rs  opengl.rs  wgpu.rs
src/ui/: renderer.rs
src/ui/widgets/: mod.rs  slider.rs  x_y_input.rs
terraform/: ec2.tf  ecr.tf  iam.tf  lifecycle-policy.json  main.tf  outputs.tf  s3.tf  vars.tf
tests/: orbital_test.rs
wasm/: index.html
web/: error.html  index.html
