[package]
name = "grav"
version = "0.1.0"
edition = "2021"

[dependencies]
femtovg = { version = "0.13.0", features = ["wgpu"] }
spin_on = "0.1.1"
winit = { version = "0.30.9" }
wgpu = { version = "24" }
egui-winit = "0.31.0"
egui-wgpu = { version = "0.31.0", features = ["winit"] }
egui = "0.31.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.32.2"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
  "console",
  "WebGlContextAttributes",
  "WebGl2RenderingContext",
] }
console_error_panic_hook = "0.1.5"
wgpu = { version = "24", features = ["webgl"] }
wasm-bindgen-futures = { version = "0.4.45" }
wasm-bindgen = "0.2.99"

[features]
default = ["simple"]
simple = []
