[package]
name = "grav"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-winit = { version = "0.31.0", default-features = false, features = [
  "links",   # default feature "clipboard doesn't work with wasm"
  "wayland",
  "x11",
] }
femtovg = { version = "0.14.0", features = ["wgpu"] }
spin_on = "0.1.1"
winit = { version = "0.30.9" }
wgpu = { version = "24" }
egui-wgpu = { version = "0.31.0", features = ["winit"] }
egui = "0.31.0"
resource = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.32.2"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
  "console",
  "WebGlContextAttributes",
  "WebGl2RenderingContext",
] }
console_error_panic_hook = "0.1.5"
resource = { version = "0.6.0", features = ["force-static"] }
wgpu = { version = "24", features = ["webgl"] }
wasm-bindgen-futures = { version = "0.4.50" }
wasm-bindgen = "0.2.100"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["simple"]
simple = []

[[bench]]
name = "simple-bench"
harness = false
[[bench]]
name = "long-bench"
harness = false
